Minor - Fixed slight misalignment of the left side of the main content

--- a/main/css/base.css
+++ b/main/css/base.css
@@ -3402,6 +3402,10 @@ a:active{
 
 }
 
+/*#homepage, #hot_courses, #announcements {*/
+#main_content section{
+    margin-left: 5px;
+}
 .welcome_course li {
     float:left;
     list-style-type: none;
